# c-kzg-4844

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Doxyfile  MANIFEST.in  Makefile  README.md  blst_sha.patch  build.sh  build.zig  build.zig.zon  c-kzg.h  fft_fr.c  fft_fr.h  fft_fr_test.c  go.mod  go.sum  kzg4844.nimble  mix.exs  project.yaml  setup.py  test_util.h  util.c
.github/workflows/: .ckzg-test.yml.swp  c-tests.yml  ckzg-test.yml  cross-compile.yml  csharp-bindings-build.yml  csharp-tests.yml  elixir-tests.yml  format-test.yml  fuzz-test.yml  go-bindings-test.yml  go-tests.yml  java-bindings-test.yml  java-tests.yml  nim-bindings-test.yml  nim-tests.yml  nodejs-bindings-test.yml  nodejs-tests.yml  python-bindings-test.yml  python-release.yml  python-tests.yml  repo-tests.yml  rust-bindings-test.yml  rust-tests.yml  sanity-tests.yml  spec-consistency-tests.yml  trusted-setup-tests.yml
bindings/: c_kzg.swg
bindings/csharp/: .gitignore  CKZG.sln  Ckzg.sln  Makefile  README.md  ckzg.c  ckzg.def  ckzg.h  ckzg_wrap.c  ckzg_wrap.def  ckzg_wrap.h  csharp.csproj  csharp.sln  kzg_tests.c  tests.c
bindings/elixir/: .clang-format  .gitignore  Makefile  README.md  mix.exs
bindings/go/: README.md  blst.S  c_kzg_4844.c  c_kzg_4844.h  go.mod  go.sum  header.h  main.go  main_test.go
bindings/java/: .gitignore  CKzg4844JNI.java  Makefile  README.md  bls12_381.hpp  build.gradle  c_kzg_4844.hpp  c_kzg_4844.swg  c_kzg_4844_jni.c  c_kzg_4844_jni.cpp  c_kzg_4844_jni.h  ckzg_jni.c  ckzg_jni.h  exception.hpp  settings.gradle  setup.hpp
bindings/nim/: .gitignore  README.md  config.nims  kzg.nim  kzg_abi.nim  kzg_ex.nim
bindings/node.js/: .clang-format  .dockerignore  .eslintignore  .eslintrc.js  .gitignore  .npmignore  .prettierignore  .prettierrc.json  .prettierrc.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  binding.dev.gyp  binding.dist.gyp  binding.gyp  ckzg.c  ckzg.cxx  ckzg.h  ckzg.swg  ckzg_wrap.c  eslint.config.mjs  kzg.cxx  kzg.h  kzg.node  kzg.ts  package.json  rollup.config.js  runnable.js  test.ts  tsconfig.build.json  tsconfig.json
bindings/python/: .gitignore  MANIFEST.in  Makefile  README.md  ckzg.c  ckzg_wrap.c  example.py  kzg_proofs.py  py_ecc_tests.py  requirements.txt  setup.py  tests.py  tiny_trusted_setup.txt
bindings/rust/: .gitignore  Cargo.toml  README.md  bindings.rs  build.rs  wrapper.h
bindings/rust/benches/: kzg_benches.rs
bindings/rust/snapshots/: bindings_x86_64-pc-windows-msvc_4096.rs  bindings_x86_64-unknown-linux-gnu_4096.rs
bindings/rust/src/: bindings.rs  lib.rs
bindings/rust/src/allocs/: mod.rs
bindings/rust/src/bindings/: generated.rs  mod.rs  serde.rs  serde_helpers.rs
bindings/rust/src/bindings/test_formats/: blob_to_kzg_commitment_test.rs  compute_blob_kzg_proof.rs  compute_cells.rs  compute_cells_and_kzg_proofs.rs  compute_kzg_proof.rs  mod.rs  recover_all_cells.rs  recover_cells_and_kzg_proofs.rs  verify_blob_kzg_proof.rs  verify_blob_kzg_proof_batch.rs  verify_cell_kzg_proof.rs  verify_cell_kzg_proof_batch.rs  verify_cell_proof.rs  verify_kzg_proof.rs
bindings/rust/src/ethereum_kzg_settings/: mod.rs
bindings/rust/src/test_formats/: blob_to_kzg_commitment_test.rs  compute_blob_kzg_proof.rs  compute_kzg_proof.rs  verify_blob_kzg_proof.rs  verify_blob_kzg_proof_batch.rs  verify_kzg_proof.rs
bindings/rust/test_vectors/: public_agg_proof.json  public_verify_kzg_proof.json
bindings/zig/: README.md  root.zig
fuzz/: .gitignore  Cargo.toml  Makefile  README.md  base_fuzz.h  c_kzg_4844.c  c_kzg_4844.h  go.mod  go.sum  main.go  main_test.go
fuzz/blob_to_kzg_commitment/: fuzz.c
fuzz/compute_blob_kzg_proof/: fuzz.c
fuzz/compute_kzg_proof/: fuzz.c
fuzz/fuzz_targets/: fuzz_blob_to_kzg_commitment.rs  fuzz_compute_blob_kzg_proof.rs  fuzz_compute_cells.rs  fuzz_compute_cells_and_kzg_proofs.rs  fuzz_compute_kzg_proof.rs  fuzz_recover_cells_and_kzg_proofs.rs  fuzz_verify_blob_kzg_proof.rs  fuzz_verify_blob_kzg_proof_batch.rs  fuzz_verify_cell_kzg_proof.rs  fuzz_verify_cell_kzg_proof_batch.rs  fuzz_verify_kzg_proof.rs
fuzz/gen_corpus/: go.mod  go.sum  main.go
fuzz/verify_blob_kzg_proof/: fuzz.c
fuzz/verify_blob_kzg_proof_batch/: fuzz.c
fuzz/verify_kzg_proof/: fuzz.c
min-bindings/: c_kzg_4844.swg
min-bindings/C#/: Makefile  ckzg.c  tests.cs
min-bindings/csharp/: Makefile  ckzg.c  tests.cs
min-bindings/python/: Makefile  ckzg.c  kzg_proofs.py  py_ecc_tests.py  tests.py  tests_swig.py
min-src/: Makefile  README.md  c_kzg_4844.c  c_kzg_4844.h
rustfuzz/: Cargo.toml
rustfuzz/fuzz_targets/: fuzz_blob_to_kzg_commitment.rs  fuzz_compute_blob_kzg_proof.rs  fuzz_compute_cells.rs  fuzz_compute_cells_and_kzg_proofs.rs  fuzz_compute_kzg_proof.rs  fuzz_recover_all_cells.rs  fuzz_recover_cells_and_kzg_proofs.rs  fuzz_verify_blob_kzg_proof.rs  fuzz_verify_blob_kzg_proof_batch.rs  fuzz_verify_cell_kzg_proof.rs  fuzz_verify_cell_kzg_proof_batch.rs  fuzz_verify_kzg_proof.rs
scripts/: convert_trusted_setup.py  do_tests_match_ref_tests.py  format_c_params.py
src/: .clang-format  Makefile  PROFILE.md  bench_util.c  bench_util.h  bls12_381.c  bls12_381.h  bls12_381_test.c  blst_util.c  blst_util.h  blst_util_test.c  c-kzg.h  c_kzg.h  c_kzg_4844.c  c_kzg_4844.h  c_kzg_7594.c  c_kzg_7594.h  c_kzg_alloc.c  c_kzg_alloc.h  c_kzg_util.c  c_kzg_util.h  c_kzg_util_test.c  ckzg.c  ckzg.h  common.c  common.h  compute_proof_lagrange_bench.c  control.h  das_extension.c  das_extension.h  das_extension_test.c  debug.c  debug.h  debug_util.c  debug_util.h  eip4844.c  eip4844.h  eip7594.c  eip7594.h  fft.c  (+57 more)
src/common/: alloc.c  alloc.h  blob.c  blob.h  bytes.c  bytes.h  common.c  common.h  constants.h  ec.c  ec.h  fr.c  fr.h  g1.c  g1.h  g2.c  g2.h  helpers.c  helpers.h  lincomb.c  lincomb.h  ret.h  settings.h  types.h  utils.c  utils.h
src/eip4844/: api.c  api.h  blob.c  blob.h  eip4844.c  eip4844.h
src/eip7594/: api.c  api.h  cell.c  cell.h  constants.h  eip7594.c  eip7594.h  fft.c  fft.h  fk20.c  fk20.h  poly.c  poly.h  recovery.c  recovery.h  types.h
src/setup/: api.c  api.h  settings.h  setup.c  setup.h
(+582 files in other folders)
