[package]
name = "c-kzg"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
# XXX: Note that we don't set a `links` attribute for Cargo, because this library may link
# either `ckzg` or `ckzg_min`. This allows the crate to be linked twice as minimal/mainnet variants
# without Cargo complaining.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["mainnet-spec"]
mainnet-spec = []
minimal-spec = []

# BLST Compilation:
# Suppress multi-threading.
# Engaged on wasm32 target architecture automatically.
no-threads = []

[dependencies]
hex = "0.4.2"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"
glob = "0.3.1"
rand = "0.8.5"
serde_yaml = "0.9.17"
serde_json = "1.0.105"

[build-dependencies]
bindgen = { git = "https://github.com/rust-lang/rust-bindgen" , rev = "0de11f0a521611ac8738b7b01d19dddaf3899e66" }
cc = "1.0"

[target.'cfg(target_env = "msvc")'.build-dependencies]
glob = "0.3"

[[bench]]
name = "kzg_benches"
harness = false

# The benchmarks crash on Windows with Rust 1.70. This is a band-aid fix for
# that. Refer to #318 for more details. This should be removed if fixed.
[profile.bench]
opt-level = 0
